# aui-adapter-pc

./: README.md  pyproject.toml
src/: aui_adapter_pc.py  pc_pygame_io.py
