
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aui-adapter-pc"
version = "0.1.0"
description = "PC adapter for AUI: keyboard DTMF + stubs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "AUI AudioUserInterface" }]

[project.entry-points."aui.adapters"]
pc = "aui_adapter_pc:PcAdapter"

[tool.setuptools.packages.find]
where = ["src"]
